<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format ="3">
  <name>dynamic_obstacle_layer</name>
  <version>0.4.2</version>
  <description>The dynamic_obstacle_layer package</description>

  <maintainer email="stevenmacenski@gmail.com">Steve Macenski</maintainer>

 <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>builtin_interfaces</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>nav2_common</depend>
  <depend>laser_geometry</depend>
  <depend>rclcpp</depend>
  <depend>message_filters</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
